--- a/scripts/loki/loki-storage-2.yaml
+++ b/scripts/loki/loki-storage-2.yaml
@@ -67,7 +67,7 @@ spec:
             name: loki-config
       containers:
         - name: loki
-          image: grafana/loki:2.4.1
+          image: "${LOKI_IMAGE}"
           volumeMounts:
             - mountPath: "/loki-store"
               name: loki-store
